# qqc2-desktop-style

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  Button.qml  CMakeLists.txt  KF5QQC2DeskopStyleConfig.cmake.in  KF5QQC2DesktopStyleConfig.cmake.in  KF6QQC2DesktopStyleConfig.cmake.in  LICENSE.LGPL-3  Mainpage.dox  Messages.sh  README.md  ScrollBar.qml  metainfo.yaml  style.qrc  style.qrc.in
Desktop/: Button.qml  CheckBox.qml  CheckDelegate.qml  CheckIndicator.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuItem.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  ScrollBar.qml  Slider.qml  SpinBox.qml  Switch.qml  SwitchDelegate.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolButton.qml
Desktop/private/: DefaultListItemBackground.qml
kirigami-plasmadesktop-integration/: CMakeLists.txt  animationspeedprovider.cpp  animationspeedprovider.h  kirigamiplasmafactory.cpp  kirigamiplasmafactory.h  plasmadesktoptheme.cpp  plasmadesktoptheme.h  plasmadesktopunits.cpp  plasmadesktopunits.h
kirigami-plasmadesktop-integration/autotests/: CMakeLists.txt  TextFieldContextMenuTest.cpp  TextFieldContextMenuTest.qml  animationspeedmodifiertest.cpp  animationspeedmodifiertest.qml  common.h
org.kde.desktop/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  CheckIndicator.qml  ComboBox.qml  Container.qml  Control.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  HorizontalHeaderView.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  RangeSlider.qml  RoundButton.qml  ScrollBar.qml  ScrollView.qml  SearchField.qml  Slider.qml  SpinBox.qml  (+17 more)
org.kde.desktop/private/: CMakeLists.txt  CheckIndicator.qml  DefaultListItemBackground.qml  DefaultSliderHandle.qml  DefaultToolBarBackground.qml  FocusRect.qml  FocusRing.qml  GlobalSonnetSettings.qml  MnemonicShortcut.qml  MobileCursor.qml  MobileTextActionsToolBar.qml  MobileTextActionsToolBarImpl.qml  RangeSliderHandle.qml  SwitchIndicator.qml  TextFieldContextMenu.qml  qmldir
plugin/: CMakeLists.txt  SystemPaletteSingleton.qml  TextSingleton.qml  itembranchindicators.cpp  itembranchindicators.h  kpropertywriter.cpp  kpropertywriter_p.h  kquickpadding_p.h  kquickstyleitem.cpp  kquickstyleitem_p.h  qmldir  qqc2desktopstyleplugin.cpp  qqc2desktopstyleplugin.h  qquickpadding_p.h  qquickstyleitem.cpp  qquickstyleitem_p.h  qsgdefaultninepatchnode.cpp  qsgdefaultninepatchnode_p.h  qsgninepatchnode.cpp  qsgninepatchnode.h  spellcheckhighlighter.cpp  spellcheckhighlighter.h  textrenderer.cpp  textrenderer_p.h
po/fr/: qqc2desktopstyle_qt5.po
po/gl/: qqc2desktopstyle_qt5.po
po/it/: qqc2desktopstyle_qt5.po
po/tr/: qqc2desktopstyle_qt5.po
po/zh_CN/: qqc2desktopstyle_qt5.po
poqm/ar/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/ast/: qqc2desktopstyle_qt.po
poqm/ca/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/ca@valencia/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/cs/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/de/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/en_GB/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/eo/: qqc2desktopstyle_qt.po
poqm/es/: qqc2desktopstyle_qt.po
poqm/eu/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/fi/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/fr/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/ga/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/gl/: qqc2desktopstyle_qt.po
poqm/he/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/hi/: qqc2desktopstyle_qt.po
poqm/hu/: qqc2desktopstyle_qt.po
poqm/ia/: qqc2desktopstyle_qt.po
poqm/is/: qqc2desktopstyle_qt.po
poqm/it/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/ka/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/ko/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/lt/: qqc2desktopstyle_qt.po
poqm/lv/: qqc2desktopstyle_qt.po
poqm/nb/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/nl/: qqc2desktopstyle_qt.po
poqm/nn/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/pl/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/pt_BR/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/ro/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/ru/: qqc2desktopstyle_qt.po
poqm/sa/: qqc2desktopstyle_qt.po
poqm/sk/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/sl/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/sv/: qqc2desktopstyle_qt.po
poqm/ta/: qqc2desktopstyle_qt.po
poqm/tr/: qqc2desktopstyle_qt.po
poqm/ug/: qqc2desktopstyle_qt.po
poqm/uk/: qqc2desktopstyle_qt.po
poqm/zh_CN/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
poqm/zh_TW/: qqc2desktopstyle5_qt.po  qqc2desktopstyle_qt.po
tests/: CheckBox.qml  ContextMenuStacking.qml  HeaderViews.qml  LineEditWithClearButton.qml  SearchField.qml  SpinBox.qml  ToolButton.qml  baselineOffset.qml  buttonIcons.qml  exclusive-menuitem.qml  scrollView.qml  tabbar.qml  testBars.qml  testComboBox.qml  testDelegates.qml  testScrollView.qml  textAreaWithScrollView.qml
